service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockfish-service
spec:
  selector:
    app: stockfish
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
